--- a/package.json
+++ b/package.json
@@ -31,3 +31,38 @@
   },
   "dependencies": {}
 }
+
+{
+  "name": "the_agbo_app",
+  "version": "1.0.0",
+  "description": "a family app",
+  "main": "app.js",
+  "scripts": {
+    "dev:css": "tailwind build main.css -o resources/css/app.css",
+    "prod:css": "postcss main.css -o resources/css/app.css",
+    "build:css": "postcss main.css -o resources/css/app.css",
+    "watch": "watch \"npm run build:css\" ./"
+  },
+  "author": "castro agbo",
+  "license": "ISC",
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.2.0",
+    "cssnano": "^4.1.10",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-node": "^4.0.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "postcss": "^7.0.17",
+    "postcss-cli": "^6.1.3",
+    "prettier": "^1.19.1",
+    "tailwindcss": "^1.1.2",
+    "watch": "^1.0.2"
+  },
+  "dependencies": {}
+}
